--- a/css/themes.css
+++ b/css/themes.css
@@ -7,12 +7,13 @@
     --tertiary: oklch(0.305 0.089 270.8);
 }
 
-/* Palette::alternative::agent */
-.agent {
-    --background: oklch(0.189 0.006 236.9);
-    --text: oklch(0.954 0.032 145.3);
-    --accent: oklch(0.417 0.009 164.6);
-    --secondary: oklch(0.648 0.139 143.8);
+/* Palette::alternative::trash-panda */
+.trash-panda {
+    --background: oklch(0.171 0.008 297);
+    --text: oklch(0.861 0.068 53.6);
+    --accent: oklch(0.359 0.017 322);
+    --secondary: oklch(0.678 0.106 20.2);
+    --tertiary: oklch(0.244 0.019 284.9);
 }
 
 /* Palette::alternative2::digital-paper */
@@ -21,13 +22,23 @@
     --text: oklch(0.97 0 0);
     --accent: oklch(0.704 0.023 223.1);
     --secondary: oklch(0.455 0.046 268.8);
+    --tertiary: oklch(0.931 0.153 134.9);
 }
 
-/* Palette::alternative3::souless */
-.souless {
-    --background: oklch(0.238 0.06 265.7);
-    --text: oklch(0.93 0.035 17.8);
-    --accent: oklch(0.931 0.047 222);
-    --secondary: oklch(0.914 0.152 149.5);
-    --tertiary: oklch(0.931 0.153 134.9);
+/* Palette::alternative3::sadakiyo5 */
+.sadakiyo5 {
+    --background: oklch(0.457 0.031 285.1);
+    --text: oklch(0.837 0.064 1);
+    --accent: oklch(0.654 0.004 197.1);
+    --secondary: oklch(0.908 0.06 172.1);
+    --tertiary: oklch(0.951 0.006 17.3);
+}
+
+/* Palette::alternative4::Hammer-&-Sickle-5 */
+.hammer-sickle-5 {
+    --background: oklch(0.145 0 0);
+    --text: oklch(0.962 0.041 85.3);
+    --accent: oklch(0.547 0.189 32.2);
+    --secondary: oklch(0.65 0.14 64.2);
+    --tertiary: oklch(0.518 0.039 84.4);
 }
