--- a/css/entries.css
+++ b/css/entries.css
@@ -179,7 +179,7 @@ pre::before {
     z-index: 1;
     background-image:
         linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.88)),
-        url("../assets/imgs/re.png");
+        url("../assets/imgs/mde7w1.png");
 
     background-size: cover;
     background-position: center;
