--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 :root {
     --header-height: 4.5rem;
-    --footer-height: 2.5rem;
+    --footer-height: 3.5rem;
     /* --footer-height: 3rem; */
 }
 
@@ -69,21 +69,49 @@ header {
     top: 0;
     height: var(--header-height);
     border-bottom: 1px solid var(--acc);
+
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background: var(--bg);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+.header-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 header h1 {
     font-family: "DepartureMono", monospace;
-    font-size: 1.5rem;
+    font-size: 1.35rem;
     line-height: 1.1;
     cursor: pointer;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    margin: 0;
 }
 
 header h1 a {
     color: inherit;
     text-decoration: none;
+}
+
+.sub-header {
+    font-family: "DepartureMono", monospace;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 0.62rem;
+    margin: 0;
+    padding-left: 2px;
+    opacity: 0.8;
 }
 
 /*
@@ -137,10 +165,13 @@ footer {
     color: var(--bg);
     /*
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem;
     padding-bottom: 0.8rem;
+
+    padding-bottom: 0.5rem 1rem;
     */
 }
 
@@ -194,6 +225,17 @@ footer a:hover {
     user-select: none;
 }
 
+/*
+.footer-center-below {
+    font-family: "DepartureMono", monospace;
+    font-size: 0.88rem;
+    font-style: italic;
+    color: var(--ter);
+    flex-basis: 100%;
+    text-align: center;
+    margin-top: 0.25rem;
+}
+*/
 /* Entries */
 .entries-stack {
     display: grid;
@@ -258,7 +300,14 @@ footer a:hover {
     }
 
     header h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
+    }
+
+    .sub-header {
+        font-size: 0.69rem;
+        margin: 0;
+        padding-left: 2px;
+        opacity: 0.8;
     }
 
     header p {
@@ -292,7 +341,14 @@ footer a:hover {
     }
 
     header h1 {
-        font-size: 2.2rem;
+        font-size: 2rem;
+    }
+
+    .sub-header {
+        font-size: 0.88rem;
+        margin: 0;
+        padding-left: 2px;
+        opacity: 0.8;
     }
 
     header p {
