--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 :root {
     --header-height: 4.5rem;
-    --footer-height: 3.5rem;
+    --footer-height: 2.5rem;
     /* --footer-height: 3rem; */
 }
 
@@ -89,7 +89,8 @@ header {
 
 header h1 {
     font-family: "DepartureMono", monospace;
-    font-size: 1.35rem;
+    /* font-size: 1.35rem; */
+    font-size: 1.5rem;
     line-height: 1.1;
     cursor: pointer;
     -webkit-user-select: none;
@@ -106,9 +107,11 @@ header h1 a {
 
 .sub-header {
     font-family: "DepartureMono", monospace;
+    /* color: var(--sec); */
     font-style: italic;
     font-weight: bold;
-    font-size: 0.62rem;
+    font-size: 0.69rem;
+    /* font-size: 0.62rem; */
     margin: 0;
     padding-left: 2px;
     opacity: 0.8;
@@ -158,7 +161,8 @@ footer {
 
 footer {
     font-family: "DepartureMono", monospace;
-    font-size: 0.8rem;
+    /* font-size: 0.88rem; */
+    font-size: 1rem;
     bottom: 0;
     height: var(--footer-height);
     background: var(--txt);
@@ -299,12 +303,14 @@ footer a:hover {
         display: none;
     }
 
+    /*
     header h1 {
         font-size: 1.5rem;
     }
+    */
 
     .sub-header {
-        font-size: 0.69rem;
+        /* font-size: 0.69rem; */
         margin: 0;
         padding-left: 2px;
         opacity: 0.8;
@@ -314,9 +320,11 @@ footer a:hover {
         font-size: 0.9rem;
     }
 
+    /*
     footer {
-        font-size: 1rem;
+        font-size: 1.1rem;
     }
+    */
 }
 
 @media (min-width: 1024px) {
@@ -340,12 +348,14 @@ footer a:hover {
         font-size: 1.25rem;
     }
 
+    /*
     header h1 {
         font-size: 2rem;
     }
+    */
 
     .sub-header {
-        font-size: 0.88rem;
+        /* font-size: 0.88rem; */
         margin: 0;
         padding-left: 2px;
         opacity: 0.8;
@@ -356,7 +366,7 @@ footer a:hover {
     }
 
     footer {
-        font-size: 1rem;
+        /* font-size: 1.2rem; */
         display: flex;
         justify-content: space-between;
         align-items: center;
