--- a/css/entries.css
+++ b/css/entries.css
@@ -46,6 +46,7 @@ h6 {
 h1 {
     font-size: 2rem;
     margin-top: 0;
+    /* margin-bottom: 2rem; */
 }
 
 h2 {
@@ -80,9 +81,11 @@ h4::before {
 /* Std elements */
 p {
     margin: 0 0 1.25rem 0;
-    white-space: pre-line;
+    /* white-space: pre-line; */
+    white-space: normal;
 }
 
+/* Links */
 a {
     color: var(--acc);
     text-decoration: underline;
@@ -95,9 +98,29 @@ a:hover {
     background-color: var(--acc);
 }
 
+/* Lists */
 ul li::marker {
     content: "+ ";
     color: var(--acc);
+}
+
+/* When the list is a palette */
+.palette-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.palette-list li code {
+    display: inline-block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0.1rem 0;
+    padding: 0.5rem 1rem;
+    border: 1px double var(--bg);
+    border-radius: 2px;
+    background-color: var(--color);
+    color: #fff;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
 }
 
 blockquote {
